// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="css-2rfp0i"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-dpg4t2-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-k5koou-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1qw1a70-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-vyo9mr-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-gq5jh7-MuiButtonBase-root-MuiButton-root"
      color="primary"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`EmptyState ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="css-2rfp0i"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-dpg4t2-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-k5koou-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1tkcs05-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-nvg5ci-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-q8ru1j-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <div
    class="css-2rfp0i"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-dpg4t2-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-k5koou-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-lvvnln-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1q7qib5-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1m9ygoa-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
